Migration to junit5 (#1776)
* Bump ibm image (old one is reported as ransomware by company firewall)

* Migration of sql module to junit5

* Migration of spatial module to junit5

* Migration of apt test module to junit5 (tested locally, bc by default are skipped) + fixed NoteTest.java tests

* Migration of codegen module to junit5

* Migration of codegen module to junit5

* Migration of collection module to junit5

* Migration of jpa codegen module to junit5

* Migration of r2dbc module to junit5

* Migration of jpa module to junit5

* Migration of maven module to junit5

* Migration of sql codegen module to junit5

* Migration of spatial module to junit5

* Migration of scala module to junit5

* Migration of kotlin and ksp module to junit5

* Migration of example modules to junit5

* Migration to junit 5 modules

* Migration to junit 5 modules - fixed tests that never been runned (even wrong config) + fixed bug with dialect functions registration and fix MetaDataExporter bug

* Migration to junit 5 modules - fixed tests that never been runned (even wrong config) + fixed bug with dialect functions registration and fix MetaDataExporter bug - velo requested changes