@@ -29,19 +29,18 @@ import com.querydsl.sql.types.StringType;
 import com.querydsl.sql.types.UtilDateType;
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.sql.SQLException;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 public class CustomTypesTest extends AbstractJDBCTest {
 
   private Configuration configuration;
 
   @Override
-  @Before
+  @BeforeEach
   public void setUp() throws ClassNotFoundException, SQLException {
     super.setUp();
     // create schema
@@ -83,7 +82,7 @@ public class CustomTypesTest extends AbstractJDBCTest {
     exporter.export(connection.getMetaData());
     var qpersonFile = Path.of("target", "customExport", "test", "QPerson.java");
     assertThat(qpersonFile).exists();
-    var person = new String(Files.readAllBytes(qpersonFile), StandardCharsets.UTF_8);
+    var person = Files.readString(qpersonFile);
     // System.err.println(person);
     assertThat(person).contains("createEnum(\"gender\"");
   }
