@@ -2,27 +2,24 @@ package com.querydsl.sql.codegen;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import com.querydsl.core.testutil.H2;
 import com.querydsl.sql.Connections;
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.sql.SQLException;
-import org.junit.AfterClass;
-import org.junit.BeforeClass;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.experimental.categories.Category;
-import org.junit.rules.TemporaryFolder;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.io.TempDir;
 
-@Category(H2.class)
+@Tag("com.querydsl.core.testutil.H2")
 public class ExportH2TwoSchemasTest {
 
-  @Rule public TemporaryFolder folder = new TemporaryFolder();
+  @TempDir File folder;
 
-  @BeforeClass
+  @BeforeAll
   public static void setUpClass() throws Exception {
     Connections.initH2();
 
@@ -35,7 +32,7 @@ public class ExportH2TwoSchemasTest {
         """);
   }
 
-  @AfterClass
+  @AfterAll
   public static void tearDownAfterClass() throws SQLException {
     Connections.close();
   }
@@ -45,15 +42,12 @@ public class ExportH2TwoSchemasTest {
     var config = new MetadataExporterConfigImpl();
     config.setSchemaPattern(null);
     config.setPackageName("test");
-    config.setTargetFolder(folder.getRoot());
+    config.setTargetFolder(folder);
 
     var exporter = new MetaDataExporter(config);
     exporter.export(Connections.getConnection().getMetaData());
 
-    var contents =
-        new String(
-            Files.readAllBytes(new File(folder.getRoot(), "test/QSurvey.java").toPath()),
-            StandardCharsets.UTF_8);
+    var contents = Files.readString(new File(folder, "test/QSurvey.java").toPath());
     assertThat(contents).contains("id");
     assertThat(contents).contains("name");
     assertThat(contents).contains("name2");
